<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_green"
    android:padding="@dimen/dimen_16_dp"
    tools:context=".fragments.Cadastro">

    <ImageView
        android:id="@+id/image_background"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_400_dp"
        android:src="@drawable/trevo_removebg_preview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16_dp"
        android:text="@string/title_cadastro"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_24_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sub_title_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16_dp"
        android:text="@string/sub_title_cadastro"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_16_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_cadastro" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_48_dp"
        android:text="@string/text_email"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_16_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_title_login" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_text_register_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50_dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_edit_text_cadastro"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_email" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24_sp"
        android:text="@string/text_name"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_16_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_text_register_login" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_text_register_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48_dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_edit_text_cadastro"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_name" />

    <TextView
        android:id="@+id/text_documento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24_sp"
        android:text="@string/text_documento"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_16_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_text_register_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_text_register_documento"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48_dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_edit_text_cadastro"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_documento" />

    <TextView
        android:id="@+id/text_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24_sp"
        android:text="@string/text_senha"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_16_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_text_register_documento" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_ed_text_register_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16_dp"
        android:background="@drawable/shape_edit_text_cadastro"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_senha"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_text_register_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:inputType="textPassword"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/layout_ed_text_email_login" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_cadastro_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16_dp"
        android:background="@drawable/shape_button_cadastro"
        android:text="@string/button_open"
        android:textColor="@color/background_green"
        android:textSize="@dimen/dimen_16_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>