<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_16_dp"
        android:background="@drawable/background_card_view_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_ed_text_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_border_edit_text"
            android:layout_marginTop="@dimen/dimen_20_dp"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_text_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_24_sp"
                android:layout_marginTop="@dimen/dimen_16_dp"
                android:layout_marginEnd="@dimen/dimen_24_sp"
                android:textColor="@color/black"
                android:background="@android:color/transparent"
                android:hint="@string/email_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_ed_text_register_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black"
            android:layout_marginTop="@dimen/dimen_24_sp"
            android:background="@drawable/shape_border_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_ed_text_email_login"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_text_register_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_24_sp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/dimen_24_sp"
                android:textColor="@color/black"
                android:background="@android:color/transparent"
                android:hint="@string/senha_login"
                android:inputType="textPassword"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_ed_text_email_login" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16_dp"
            android:text="@string/button_open"
            android:textSize="@dimen/dimen_16_sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/shape_button"
            app:layout_constraintTop_toBottomOf="@+id/layout_ed_text_register_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/text_create_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_16_sp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/dimen_16_dp"
            android:gravity="end"
            android:text="@string/create_account"
            android:textStyle="normal"
            app:layout_constraintTop_toBottomOf="@+id/button_login_confirmation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/button_fingerprint"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_70_dp"
            android:layout_margin="@dimen/dimen_16_dp"
            android:focusable="true"
            android:src="@drawable/baseline_fingerprint"
            app:layout_constraintTop_toBottomOf="@+id/text_create_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>